# HD_E2E

./: camera_config.json  hmg_mission11_global_path.txt  가천대_빕둥.bag
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/global_path_demo/: global_path_from_file
devel/lib/morai_stp3/: carla_agent.py
devel/lib/pkgconfig/: global_path_demo.pc  morai_msgs.pc  morai_stp3.pc  vehicle_controller.pc
devel/lib/vehicle_controller/: vehicle_controller.py
devel/share/gennodejs/ros/morai_msgs/msg/: _index.js
devel/share/gennodejs/ros/morai_msgs/srv/: _index.js
devel/share/global_path_demo/cmake/: global_path_demoConfig.cmake
devel/share/morai_msgs/cmake/: morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/morai_stp3/cmake/: morai_stp3Config.cmake
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/vehicle_controller/cmake/: vehicle_controllerConfig.cmake
src/global_path_demo/: CMakeLists.txt  package.xml
src/global_path_demo/src/: global_path_from_file.cpp  morai_gps_log copy.txt  morai_gps_log.txt
src/morai_stp3/: CMakeLists.txt
src/morai_stp3/src/: carla_agent_M1.py  carla_agent_M2.py  check_image.py  morai_agent.py
src/morai_stp3/src/stp3/: metrics.py
src/morai_stp3/src/stp3/layers/: convolutions.py
src/morai_stp3/src/stp3/models/: planning_model_M1.py  stp3_M1.py
src/vehicle_controller/: CMakeLists.txt
src/vehicle_controller/scripts/: ego_initial.json  find_error.py  global_path.txt  logging_gps.py  path_publisher.py  sungju_ctr.py  vehicle_controller.py
