<?xml version="1.0"?>
<package format="2">
  <name>global_path_demo</name>
  <version>0.0.1</version>
  <description>The global_path_demo package</description>

  <!-- Maintainer 정보 -->
  <maintainer email="vip-lab@todo.todo">vip-lab</maintainer>

  <!-- 라이센스 (BSD 사용 예제) -->
  <license>BSD</license>

  <!-- 패키지 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospkg</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- URL (선택 사항) -->
  <url type="website">http://wiki.ros.org/global_path_demo</url>

  <!-- 추가 정보 -->
  <export></export>
</package>

